--- a/spec/internal/config/database.yml
+++ b/spec/internal/config/database.yml
@@ -1,5 +1,4 @@
 test:
   adapter: postgresql
-  host: <%= ENV.fetch("DB_HOST") %>
-  database: <%= ENV.fetch("DB_NAME") %>
-  username: <%= ENV.fetch("DB_USERNAME") %>
+  url: <%= ENV.fetch("DATABASE_URL") %>
+  database: postgres_enum
