Drop Ruby 2.6 support (dip requires 2.7), add fresh rubies to CI

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,6 @@
 services:
   ruby:
-    image: ruby:${RUBY_IMAGE:-2.7}-buster
+    image: ruby:${RUBY_IMAGE:-2.7}
     environment:
       - HISTFILE=/app/tmp/.bash_history
       - BUNDLE_PATH=/bundle
